// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-dependencies-expand Renders \`service-dependencies-expand\` with item 1`] = `
<span>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <button
      class="v-btn v-btn--fab v-btn--has-bg v-btn--round theme--dark v-size--small impact-state-0"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--dark"
        >
          engineering
        </i>
      </span>
    </button>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge grey"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate pa-0 material-icons theme--dark"
          >
            pause
          </i>
        </span>
      </transition-stub>
    </span>
  </span>
   
  <!---->
</span>
`;

exports[`service-dependencies-expand Renders \`service-dependencies-expand\` with item with cycle 1`] = `
<span>
  <span
    class="v-badge v-badge--overlap theme--light"
  >
    <button
      class="v-btn v-btn--fab v-btn--has-bg v-btn--round theme--dark v-size--small impact-state-0"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--dark"
        >
          engineering
        </i>
      </span>
    </button>
    <span
      class="v-badge__wrapper"
    >
      <transition-stub
        name="scale-rotate-transition"
      >
        <span
          aria-atomic="true"
          aria-label="Badge"
          aria-live="polite"
          class="v-badge__badge grey"
          role="status"
          style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate pa-0 material-icons theme--dark"
          >
            pause
          </i>
        </span>
      </transition-stub>
    </span>
  </span>
   
  <div
    class="v-tooltip"
    top=""
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate ml-1 material-icons theme--light error--text"
      style="font-size: 14px;"
    >
      autorenew
    </i>
      
    <span>
      Cycle dependency
    </span>
  </div>
</span>
`;

exports[`service-dependencies-expand Renders \`service-dependencies-expand\` with item with load more 1`] = `
<span>
  <div
    class="v-tooltip"
    right=""
  >
    <button
      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light"
        >
          more_horiz
        </i>
      </span>
    </button>
      
    <span>
      Load more
    </span>
  </div>
   
  <!---->
</span>
`;
